# thesis-python

./: Dockerfile  main.py  pyproject.toml  requirements.txt
app/: __init__.py  app.py  crud.py  database.py  main.py  models.py  schemas.py  settings.py
