[tool.poetry]
name = "thesis-python-crud"
version = "0.1.0"
description = "FastAPI CRUD App for performance benchmarking"
authors = ["Rawlsy-py <christopher_m_mitchell@live.co.uk>"]
license = "MIT"
readme = "README.md"
packages = [{ include = "thesis_python_crud" }]

[tool.poetry.dependencies]
python = "^3.11"
alembic = "^1.7.3"
asyncpg = "^0.22.0"
databases = "^0.4.3"
fastapi = "^0.109.2"
httpx = "^0.18.2"
sqlalchemy = "^1.3.0"
typer = "^0.4.0"
uvicorn = "^0.15.0"

[tool.poetry.group.dev.dependencies]
ruff = "^0.2.2"
pytest = "^6.2.5"
pytest-asyncio = "^0.15.1"

[tool.ruff]
select = ["ALL"]
ignore = ["ANN101", "D407", "D413"]
line-length = 250

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
