[tool.poetry]
name = "thesis-python-crud"
version = "0.1.0"
description = "FastAPI CRUD App for performance benchmarking"
authors = ["Rawlsy-py <christopher_m_mitchell@live.co.uk>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
alembic = "^1.13.2"
asyncpg = "^0.29.0"
databases = "^0.9.0"
fastapi = "^0.111.0"
httpx = "^0.27.0"
sqlalchemy = "^2.0.31"
typer = "^0.12.3"
uvicorn = "^0.30.1"

[tool.poetry.group.dev.dependencies]
ruff = "^0.5.1"
pytest = "^8.2.2"
pytest-asyncio = "^0.23.7"

[tool.ruff]
select = ["ALL"]
ignore = ["ANN101", "D407", "D413"]
line-length = 250

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
